OODA-19: Add LineageService with 7 methods to Java SDK